# climate-assessment

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASING.md  RELEASING.rst  pyproject.toml  requirements.txt  run_docker.sh  setup.cfg
.github/: pull_request_template.md
.github/workflows/: build-docs.yaml  ci-cd-workflow.yaml  ci-cd-workflow.yml  get-infiller-database.py  nightly.yaml  publish.yaml  wg3.yaml
data/: emissions_variable_list_climateruns.xlsx
data/cicero/: subset_cscm_configfile.json
doc/: NOTICE.rst  conf.py  dev.rst  emulator.rst  general.rst  index.rst  install.rst  prereqs.rst  utility.rst
docs/: README.rst  code.rst  conf.py  dev.rst  emulator.rst  install.rst  prereqs.rst  user_guide.rst
notebooks/: run-example-ciceroscm.ipynb  run-example-custom.ipynb  run-example-fair.ipynb  run-example-magicc.ipynb  sulfur_update_check.R
notebooks/Rscripts/: RUNCOMMAND_harmonization_or_update_infillerdatabase.txt  sulfur_update_check.R
notebooks/Rscripts/output-data/: sulfur_emissions_CEDS_global.csv
scripts/: generate-magicc-sr15-input-files.py  run_clim.py  run_create_infillerdatabase.py  run_extract_ips.py  run_harm.py  run_harm_inf.py  run_infilling.py  run_postprocess.py  run_split_scenarios.py  run_workflow.py
src/climate_assessment/: __init__.py  checks.py  cli.py  harmonization_and_infilling.py  postprocess.py  testing.py  utils.py
src/climate_assessment/climate/: __init__.py  ciceroscm.py  fair.py  magicc7.py  post_process.py  variable_definitions.csv  wg3.py
src/climate_assessment/harmonization/: __init__.py  aneris_ar6.yaml  aneris_ar6_co2.yaml  aneris_sr15.yaml  aneris_sr15_co2.yaml  history_ar6.csv  history_ar6_original.csv  history_sr15.csv  regions_ar6.csv
src/climate_assessment/infilling/: __init__.py  cmip6-ssps-workflow-emissions.csv
tests/: conftest.py
tests/integration/: test_categorisation.py  test_checks.py  test_climate.py  test_climate_integration.py  test_harmonization.py  test_harmonization_and_infilling.py  test_infillerdatabase.py  test_infilling_integration.py  test_run_clim_integration.py  test_run_silicone_modules.py  test_units.py  test_utils.py  test_workflow_integration.py
tests/nightly/: test_clim_nightly.py  test_harmonization_and_infilling_nightly.py  test_harmonize_and_infill_nightly.py  test_infilling_integration_nightly.py  test_infilling_nightly.py  test_run_clim_integration_nightly.py  test_wg3_reproduction_ciceroscm.py  test_wg3_reproduction_fair.py  test_wg3_reproduction_magicc.py  test_workflow_integration_nightly.py  test_workflow_nightly.py  test_workflow_sr15_nightly.py
tests/regression/: test_clim.py  test_harmonize.py  test_harmonize_and_infill.py  test_infilling.py  test_postprocess.py  test_workflow.py
tests/test-data/: ar6_IPs_emissions.csv  ar6_minimum_emissions.csv  ar6_minimum_emissions_co2.csv  ar6_minimum_emissions_co2eip.csv  cmip6-ssps-workflow-emissions.csv  cmip6-ssps-workflow-emissions_infillerdatabase_until2100.csv  ex2.csv  ex2_adjusted-waste-other.csv  ex2_broken_only.csv  ex2_harmonized_for_infilling_regression.csv  ex2_starting2015.csv  sr15.csv  starting-point-test-data.csv
tests/test-data/expected-output-wg3/: two_ips_climate_cicero.xlsx  two_ips_climate_fair.csv  two_ips_climate_fair.xlsx  two_ips_climate_magicc.xlsx
tests/test-data/infilling/: infilled.csv
tests/test-data/workflow-ciceroscm/: ex2_IAMC_climateassessment.xlsx  ex2_alloutput_meta.csv  ex2_full_exceedance_probabilities.csv  ex2_full_exceedance_probabilities.xlsx
tests/test-data/workflow-ciceroscm-slimmed/: ex2_IAMC_climateassessment.xlsx  ex2_alloutput_meta.csv  ex2_full_exceedance_probabilities.csv  ex2_full_exceedance_probabilities.xlsx  ex2_harmonized_infilled.csv
tests/test-data/workflow-fair/: ex2_alloutput_meta.csv  ex2_full_exceedance_probabilities.csv  ex2_full_exceedance_probabilities.xlsx
tests/test-data/workflow-fair-slimmed/: ex2_alloutput_meta.csv  ex2_full_exceedance_probabilities.csv  ex2_full_exceedance_probabilities.xlsx  ex2_harmonized_infilled.csv
tests/test-data/workflow-harmonization/: ex2_checkedinput_lead.csv  ex2_excluded_variables_notallyears.csv  ex2_harmonized.csv
tests/test-data/workflow-harmonization-and-infilling/: ex2_harmonized_infilled.csv
tests/test-data/workflow-harmonization-and-infilling-slimmed/: ex2_excluded_scenarios_noCO2orCO2EnIPreported.csv  ex2_excluded_scenarios_unexpectednegatives.csv  ex2_harmonized_infilled.csv
tests/test-data/workflow-infilling/: infilled.csv
tests/test-data/workflow-infilling-slimmed/: infilled.csv
tests/test-data/workflow-magicc/: ex2_alloutput_meta.csv  ex2_full_exceedance_probabilities.csv  ex2_full_exceedance_probabilities.xlsx
tests/test-data/workflow-magicc-sr15/: sr15_IAMC_climateassessment.xlsx  sr15_IAMC_climateassessment0000.csv  sr15_alloutput.xlsx  sr15_alloutput_meta.csv  sr15_full_exceedance_probabilities.csv  sr15_full_exceedance_probabilities.xlsx  sr15_harmonized_infilled.csv
tests/test-data/workflow-magicc-sr15-no-harmonization/: sr15_IAMC_climateassessment.xlsx  sr15_IAMC_climateassessment0000.csv  sr15_alloutput.xlsx  sr15_alloutput_meta.csv  sr15_full_exceedance_probabilities.csv  sr15_full_exceedance_probabilities.xlsx  sr15_harmonized_infilled.csv
tests/unit/: test_climate.py
