[tool.poetry]
name = "climate-assessment"
version = "0.1.4a0"
description = "Climate assessment of long-term emissions pathways: IPCC AR6 WGIII version"
authors = [
    "Jarmo S. Kikstra <kikstra@iiasa.ac.at>",
    "Zebedee Nicholls <zebedee.nicholls@climate-energy-college.org>",
    "Jared Lewis <jared.lewis@climate-resource.com>",
    "Christopher J. Smith <C.J.Smith1@leeds.ac.uk>",
    "Robin D. Lamboll <r.lamboll@imperial.ac.uk>",
    "Edward Byers <byers@iiasa.ac.at>",
    "Marit Sandstad <marit.sandstad@cicero.oslo.no>",
    "Laura Wienpahl <wienpahl@iiasa.ac.at>",
    "Philip Hackstock <hackstock@iiasa.ac.at>",
]
readme = "README.rst"
packages = [
    {include = "climate_assessment", from = "src"},
]
keywords = ["climate", "integrated assessment", "emissions", "temperature", "IPCC"]
license = "MIT License"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
homepage = "https://github.com/iiasa/climate-assessment"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
