[metadata]
name = climate-assessment
author = Jarmo S. Kikstra, Zebedee R.J. Nicholls, Jared Lewis, Christopher J. Smith, Robin D. Lamboll, Edward Byers, Marit Sandstad, Laura Wienpahl, Philip Hackstock
author_email = kikstra@iiasa.ac.at
license = MIT License
keywords = climate, integrated assessment, emissions, temperature, IPCC
description = Climate assessment of long-term emissions pathways: IPCC AR6 WGIII version
long_description_content_type = text/x-rst
long_description = file:README.rst
url = https://github.com/iiasa/climate-assessment
project_urls =
    Source = http://github.com/iiasa/climate-assessment
    # ToDo: Change documentation URL before publishing
    Documentation = https://iiasa-energy-program-climate-assessment.readthedocs-hosted.com/en/latest/
    Bug_Reports = https://github.com/iiasa/climate-assessment/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    aneris-iamc==0.3.1
    awscli
    click
    fair==1.6.2
    importlib-metadata
    joblib
    matplotlib
    numpy
    openscm-units==0.5.0
    openscm-runner==0.9.1
    pandas
    pint>=0.13, <=0.20
    pooch
    pyam-iamc>=1.7.0
    pymagicc==2.1.3
    requests
    scmdata==0.15.0
    silicone==1.2.1
    tqdm
    xarray
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=1.4
    sphinx_rtd_theme

tests =
    codecov
    nbval
    pytest-cov
    pytest-console-scripts
    pytest>=4.0


deploy =
    # setuptools and awscli in install_requires/setup_requires
    twine>=1.11.0
    wheel>=0.31.0

linter =
    bandit
    black
    black-nb
    flake8
    isort

notebooks =
    notebook
    ipywidgets

dev =
    %(docs)s
    %(tests)s
    %(deploy)s
    %(linter)s
    %(notebooks)s


[flake8]
# E203 - whitespace before ':'. Opposite convention enforced by black
# E266 - too many leading '#' for block comments
# E501 - line too long. Handled by black, we have longer lines
# W503 - line break before binary operator.
ignore = E203, E266, E501, W503
max-line-length = 88

[tool:pytest]
testpaths = tests
addopts =
    -m "not nightly and not wg3"
markers =
    nightly: Slow-running nightly tests.
    wg3: Tests for exact reproduction of WG3 database.

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = climate_assessment
# black default line length:
line_length = 88
# multiline breaks like black:
multi_line_output = 3
