[options]
package_dir =
    =src
include_package_data = True
install_requires =
    aneris-iamc==0.3.1
    awscli>=1.29.4
    click
    fair==1.6.2
    importlib-metadata
    joblib
    matplotlib
    numpy
    openscm-units
    openscm-runner==0.12.1
    pandas
    pint>=0.13
    pooch
    pyam-iamc>=1.9.0
    pymagicc>=2.1.4
    requests
    scmdata>=0.15.0
    silicone==1.3.0
    tqdm
    xarray
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
docs =
    sphinx==5.3.0
    sphinx_rtd_theme

tests =
    codecov
    nbval
    pytest-cov
    pytest-console-scripts
    pytest>=4.0


deploy =
    # setuptools and awscli in install_requires/setup_requires
    twine>=1.11.0
    wheel>=0.31.0

linter =
    bandit
    black
    flake8
    isort

notebooks =
    notebook
    ipywidgets

dev =
    %(docs)s
    %(tests)s
    %(deploy)s
    %(linter)s
    %(notebooks)s


[flake8]
# E203 - whitespace before ':'. Opposite convention enforced by black
# E266 - too many leading '#' for block comments
# E501 - line too long. Handled by black, we have longer lines
# W503 - line break before binary operator.
ignore = E203, E266, E501, W503
max-line-length = 88


[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = climate_assessment
# black default line length:
line_length = 88
# multiline breaks like black:
multi_line_output = 3
